# sales-agent

./: .env.example  .gitignore  Agents.md  README.md  pyproject.toml
app/: __init__.py  main.py
app/agent/: __init__.py  memory.py  prompts.py  runtime.py  streaming.py
app/api/: dependencies.py  middleware.py
app/core/: auth_context.py  config.py  database.py  errors.py  logging.py  request_context.py  security.py  token_usage.py  user_context.py
app/db/: __init__.py  data.sql  schema.sql  seed.py
app/models/: __init__.py  chat_memory.py  product.py  sales_order.py  sales_region.py  sales_rep.py
app/repositories/: __init__.py  base_repository.py  chat_memory_repository.py  product_repository.py  sales_order_repository.py  sales_region_repository.py  sales_rep_repository.py
app/schemas/: __init__.py  agent.py  auth.py  sales.py
app/services/: __init__.py  sales_query_service.py
app/tools/: __init__.py  anomaly_detection_tool.py  chart_generator_tool.py  formatting.py  logging.py  registry.py  sales_query_tool.py  sales_summary_tool.py  sales_trend_tool.py  schemas.py
docs/agent_output/: 001-tech-stack.md  002-agent-data-structures.md  003-user-permission-model.md  004-agent-answer-cache-decision-review.md
docs/plans/: 001-sales-agent-refactor-master-plan.md  002-data-model-repository-change-log.md
docs/process/: 001-project-initialization-files.md  003-sales-service-and-schemas-process.md  004-langchain-tools-process.md  005-agent-runtime-and-memory-process.md  006-agent-api-and-streaming-process.md  007-auth-and-permission-filtering-process.md  (+6 more)
(+45 files in other folders)
